frontend/tests/cases/positive/polymorphism/product.gr
-- gr --no-eval
data Bool = True | False

data X a b where
  X : a → b → X a b

product : Int `X` Float `X` Bool
product = 0 `X` 0.0 `X` False
