frontend/tests/cases/negative/simple/name-clash.gr
data Bool = True | False

map : Int
map = 0

id : Int
id = 0

onlyDefinedHere : Bool
onlyDefinedHere = True

onlyDefinedHere : Bool
onlyDefinedHere = True
